test the workflow

--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -16,3 +16,16 @@ jobs:
         
       - name: docker build images
         run: docker build . --file dataarchaive/Dockerfile -t lates:$(date +%s)
+
+      - name: visualize the image
+        run: docker images
+      - name: Checking runnning container 
+        run: docker ps -a
+      - name: Start the container
+        run: docker run -d -p 8080:80 lates:$(date +%s)
+      - name:  test the container
+        run: curl http://localhost:8080 > output.txt
+      - name: Display the output
+        run: cat output.txt
+      - name: stop the container
+        run: docker stop $(docker ps -q)
