--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -15,14 +15,14 @@ jobs:
         uses: actions/checkout@v4
         
       - name: docker build images
-        run: docker build . --file dataarchaive/Dockerfile -t lates:$(date +%s)
+        run: docker build . --file dataarchaive/Dockerfile -t test:latest
 
       - name: visualize the image
         run: docker images
       - name: Checking runnning container 
         run: docker ps -a
       - name: Start the container
-        run: docker run -d -p 8080:80 lates:$(date +%s)
+        run: docker run -d -p 8080:80 test:latest
       - name:  test the container
         run: curl http://localhost:8080 > output.txt
       - name: Display the output
