--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -37,6 +37,8 @@ jobs:
        with:
         name: test-image
         path: /tmp/
+     - name: Set up Docker
+       uses: docker/setup-buildx-action@v3
      - name: Load image
        run: docker load < /tmp/test:${{ github.sha }}.tar
 
