--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -21,13 +21,16 @@ jobs:
       - name: docker build images
         run: docker build . --file dataarchaive/Dockerfile -t test:${{ github.sha }}
       - name: Save the docker image
-        run: docker save test:${{ github.sha }} > /tmp/test:${{ github.sha }}.tar
+        run: |
+          docker save test:${{ github.sha }} > /tmp/test:${{ github.sha }}.tar
+          ls -la /tmp/
       - name: upload image on artifect
         uses: actions/upload-artifact@v4
         with:
           name: test-image
-          path:  test:${{ github.sha }}.tar
-          retain-days: 2      
+          path:  /tmp/test:${{ github.sha }}.tar
+          retain-days: 2   
+          if-no-files-found: error   
   test:
     runs-on: ubuntu-latest
     needs: build
